<resources>
    <string name="app_name">Position Write</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="invalid_login_toast">Invalid username or password</string>
    <string name="note_title_hint">Title</string>
    <string name="note_content_hint">Content</string>
    <string name="save_button_text">Save</string>
    <string name="delete_button_text">Delete</string>
    <string name="welcome_text">Welcome to Position Write!</string>
    <string name="filter_button_text">Filter</string>
    <string name="create_note_button_text">Create Note</string>
    <string name="category_edit_text">Select Category</string>
    <string name="category_hint">Category</string>
    <string name="date_hint">Date (e.g., 2023-12-31)</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="category">Category</string>
    <string name="date_e_g_2023_12_31">Date (e.g., 2023-12-31)</string>
    <string name="save">Save</string>
</resources>
