<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditNoteActivity">

    <EditText
        android:id="@+id/note_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/note_title_hint"
        android:inputType="text"
        android:autofillHints="title"
        android:minHeight="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <EditText
        android:id="@+id/note_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/note_content_hint"
        android:inputType="textMultiLine"
        android:autofillHints="content"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/note_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <EditText
        android:id="@+id/category_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/category_hint"
        android:inputType="text"
        android:autofillHints="category"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/note_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <EditText
        android:id="@+id/date_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/date_hint"
        android:inputType="date"
        android:autofillHints="date"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/category_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save_button_text"
        app:layout_constraintTop_toBottomOf="@id/date_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/delete_button_text"
        app:layout_constraintTop_toBottomOf="@id/save_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
