<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/category_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/category_hint"
        android:inputType="text"
        android:autofillHints="category"
        android:minHeight="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <EditText
        android:id="@+id/time_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/date_hint"
        android:inputType="date"
        android:autofillHints="date"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/category_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <EditText
        android:id="@+id/content_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/note_content_hint"
        android:inputType="text"
        android:autofillHints="content"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/time_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <Button
        android:id="@+id/filter_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/filter_button_text"
        app:layout_constraintTop_toBottomOf="@id/content_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/filter_button"
        app:layout_constraintBottom_toTopOf="@id/create_note_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/create_note_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_note_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
